--- a/pages/index.css
+++ b/pages/index.css
@@ -1,3 +1,25 @@
-h1 {
-    font-size: 48px;
+@import url('../blocks/header/header.css');
+
+@font-face {
+  font-family: 'Roboto';
+  font-style: medium;
+  src: url('../fonts/roboto-medium-webfont.woff') format('woff');
+}
+
+@font-face {
+  font-family: 'Roboto';
+  font-style: normal;
+  src: url('../fonts/roboto-regular-webfont.woff') format('woff');
+}
+
+@font-face {
+  font-family: 'Roboto Slab';
+  font-style: normal;
+  src: url('../fonts/robotoslab-regular-webfont.woff') format('woff');
+}
+
+.body {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
