Хэдер и Search сверстаны + адаптив

--- a/blocks/header/__ref/header__ref.css
+++ b/blocks/header/__ref/header__ref.css
@@ -6,3 +6,9 @@
 .header__ref:first-of-type {
   margin-right: 34px;
 }
+
+@media all and (max-width: 425px){
+  .header__ref:first-of-type {
+    margin-right: 7%;
+  }
+}
