--- a/blocks/header/__menu/header__menu.css
+++ b/blocks/header/__menu/header__menu.css
@@ -1,11 +1,13 @@
 .header__menu {
   margin-right: 101px;
+  margin-bottom: 0px;
 
-  width: 190px;
+  max-width: 190px;
 
   display: grid;
+  align-items: flex-end;
   grid-template-columns: 35% 15% 50%;
-  grid-template-rows: auto 10px;
+  grid-template-rows: auto auto;
   grid-template-areas:
     'a a a'
     'b . c'; 
@@ -15,4 +17,18 @@
   font-weight: 500;
   font-size: 18px;
   line-height: 24px;  
+}
+
+@media all and (max-width: 1450px){
+  .header__menu {
+    margin-right: 5.5%;
+  }
+}
+
+@media all and (max-width: 425px){
+  .header__menu {
+    width: 150px;
+    margin-right: 4%;
+    font-size: 16px;
+  }
 }
