--- a/pages/index.css
+++ b/pages/index.css
@@ -1,4 +1,6 @@
 @import url('../blocks/header/header.css');
+@import url('../blocks/content/content.css');
+@import url('../blocks/search/search.css');
 
 @font-face {
   font-family: 'Roboto';
@@ -19,6 +21,7 @@
 }
 
 .body {
+  margin: 0;
   display: flex;
   flex-direction: column;
   align-items: center;
