--- a/blocks/search/search.css
+++ b/blocks/search/search.css
@@ -1,9 +1,9 @@
+@import url('./__button/search__button.css');
 @import url('./__description/search__description.css');
-@import url('./__title/search__title.css');
 @import url('./__form-container/search__form-container.css');
-@import url('./__form-container/__form/search__form.css');
-@import url('./__form-container/__form/__button/search__button.css');
-@import url('./__form-container/__form/__input/search__input.css');
+@import url('./__form/search__form.css');
+@import url('./__input/search__input.css');
+@import url('./__title/search__title.css');
 
 .search {
   width: 1440px;
@@ -31,7 +31,7 @@
   }
 }
 
-@media all and (max-width: 475px) {
+@media all and (max-width: 425px) {
   .search {
     background: url('./phone-320.jpg') center/cover no-repeat;
   }
