--- a/pages/index.css
+++ b/pages/index.css
@@ -1,6 +1,10 @@
 @import url('../blocks/header/header.css');
 @import url('../blocks/content/content.css');
 @import url('../blocks/search/search.css');
+@import url('../blocks/preloader/preloader.css');
+@import url('../blocks/not-found/not-found.css');
+@import url('../blocks/result/result.css');
+@import url('../blocks/link/link.css');
 
 @font-face {
   font-family: 'Roboto';
@@ -18,6 +22,12 @@
   font-family: 'Roboto Slab';
   font-style: normal;
   src: url('../fonts/robotoslab-regular-webfont.woff') format('woff');
+}
+
+@font-face {
+  font-family: 'Source Sans Pro';
+  font-style: normal;
+  src: url('../fonts/sourcesanspro.woff') format('woff');
 }
 
 .body {
