Добавлен адаптив в блок search

--- a/blocks/result/__item-container/result__item-container.css
+++ b/blocks/result/__item-container/result__item-container.css
@@ -4,7 +4,22 @@
 
   display: grid;
   grid-template-columns: repeat(3, auto);
-  grid-column-gap: 16px;
+  grid-column-gap: 1%;
   grid-template-rows: auto;
   grid-row-gap: 16px;
+}
+
+@media all and (max-width: 650px) {
+  .result__item-container {
+    margin-top: 40px;
+  }  
+}
+@media all and (max-width: 425px) {
+  .result__item-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    width: 90%;
+  }
 }
