--- a/blocks/result/__button/result__button.css
+++ b/blocks/result/__button/result__button.css
@@ -9,7 +9,7 @@
 
   font-family: 'Roboto';
   font-style: normal;
-  font-weight: 500;
+  font-weight: bold;
   font-size: 18px;
   line-height: 24px;
   color: #1a1b22;
@@ -22,4 +22,14 @@
 
 .result__button:hover, :focus {
   opacity: 0.9;
+}
+
+@media all and (max-width: 768px) {
+  .result__button {
+    width: 240px;
+    height: 56px;
+
+    margin-top: 25px;
+    margin-bottom: 40px;
+  }
 }
