--- a/blocks/result/__headers/result__headers.css
+++ b/blocks/result/__headers/result__headers.css
@@ -1,9 +1,17 @@
 .result__headers {
   margin: 80px 0 0;
-  position: relative;  
   width: 86%;
 
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  align-items: baseline;
+}
+
+@media all and (max-width: 650px) {
+  .result__headers {
+    flex-direction: column;
+    align-items: baseline;
+    margin-top: 32px;
+    width: 90%;
+  }
 }
