--- a/blocks/result/__item-title/result__item-title.css
+++ b/blocks/result/__item-title/result__item-title.css
@@ -1,5 +1,7 @@
 .result__item-title {
-  margin: 12px 0 0 4%;
+  margin: 12px 0 0;
+  width: 86%;
+  align-self: center;
 
   font-family: 'Roboto Slab';
   font-style: normal;
@@ -7,4 +9,26 @@
   font-size: 26px;
   line-height: 30px;
   color: #1A1B22;
+}
+
+@media all and (max-width: 1450px) {
+  .result__item-title {
+    font-size: 24px;
+    line-height: 26px;
+  }
+}
+
+@media all and (max-width: 768px) {
+  .result__item-title {
+    max-height: 75px;
+    overflow: hidden;
+    font-size: 22px;
+    line-height: 24px;
+  }
+}
+
+@media all and (max-width: 425px) {
+  .result__item-title {
+    width: 89%;
+  }
 }
