--- a/blocks/result/__item/result__item.css
+++ b/blocks/result/__item/result__item.css
@@ -2,11 +2,26 @@
   width: 100%;
   height: 576px;
 
+  position: relative;
+
   display: flex;
   flex-direction: column;
 
   background: #ffffff;
-  border-radius: 3%;
+  border-radius: 15px;
 
   overflow: hidden;
+}
+
+@media all and (max-width: 768px) {
+  .result__item {
+    height: 420px;
+  }
+}
+
+@media all and (max-width: 425px) {
+  .result__item {
+    height: auto;
+    margin-top: 8px;
+  }
 }
