--- a/blocks/result/__media/result__media.css
+++ b/blocks/result/__media/result__media.css
@@ -1,5 +1,9 @@
 .result__media {
-  margin: auto 0 24px 4%;
+  position: absolute;
+  margin:0;
+  bottom: 0;
+  left: 6%;
+  padding-bottom: 24px;  
 
   color: #b6bcbf;
   font-family: 'Roboto Slab';
@@ -7,4 +11,20 @@
   font-weight: bold;
   font-size: 16px;
   line-height: 20px;
+}
+
+@media all and (max-width: 1024px) {
+  .result__media {
+    padding-bottom: 16px;
+  }
+}
+
+@media all and (max-width: 425px) {
+  .result__media {
+    position: unset;
+    width: 89%;
+    align-self: center;
+
+    margin: 10px 0 0;
+  }
 }
