--- a/blocks/result/__ref/result__ref.css
+++ b/blocks/result/__ref/result__ref.css
@@ -1,5 +1,6 @@
 .result__ref {
   margin-right: 30px;
+  position: relative;
 
   font-family: 'Roboto';
   font-style: normal;
@@ -18,6 +19,12 @@
   border-right: 2px solid #1A1B22;
   transform: rotate(45deg);
   position: absolute;
-  top: 19px;
-  right: 11px;
+  top: 9px;
+  right: -15px;
+}
+
+@media all and (max-width: 650px) {
+  .result__ref {
+    margin: 16px 0 0 -4px;
+  }
 }
