--- a/blocks/result/__title/result__title.css
+++ b/blocks/result/__title/result__title.css
@@ -7,3 +7,10 @@
   line-height: 46px;
   color: #1A1B22;
 }
+
+@media all and (max-width: 768px) {
+  .result__title {
+    font-size: 30px;
+    line-height: 34px;
+  }
+}
