сверстаны блоки author и footer с адаптивом

--- a/pages/index.css
+++ b/pages/index.css
@@ -5,6 +5,8 @@
 @import url('../blocks/not-found/not-found.css');
 @import url('../blocks/result/result.css');
 @import url('../blocks/link/link.css');
+@import url('../blocks/author/author.css');
+@import url('../blocks/footer/footer.css');
 
 @font-face {
   font-family: 'Roboto';
