Страница analitycs: таблица со статистикой и хэдер

--- a/blocks/header/__ref/header__ref.css
+++ b/blocks/header/__ref/header__ref.css
@@ -1,4 +1,5 @@
-@import url('./_no-active/header__ref_no-active.css');
+@import url('./_grey/header__ref_grey.css');
+@import url('./_black/header__ref_black.css');
 .header__ref {
   color: #ffffff;
 }
