Свёрстана страница analytics, добавлен адаптив

--- a/blocks/header/__ref/header__ref.css
+++ b/blocks/header/__ref/header__ref.css
@@ -1,5 +1,7 @@
 @import url('./_grey/header__ref_grey.css');
 @import url('./_black/header__ref_black.css');
+@import url('./_hover/header__ref_hover.css');
+
 .header__ref {
   color: #ffffff;
 }
