--- a/blocks/stat/__table/stat__table.css
+++ b/blocks/stat/__table/stat__table.css
@@ -3,10 +3,10 @@
   margin: 48px 0 80px 104px;
   
   display: grid;
-  grid-template-columns: 8.5% 1fr 1fr 1fr 1fr;
-  grid-template-rows: 50px 17px 30px repeat(6, 80px) 30px;
+  grid-template-columns: 104px 1fr 1fr 1fr 1fr;
+  grid-template-rows: 45px 15px 30px repeat(6, 80px) 40px;
   grid-template-areas:
-    'datetitle numbertitle . . .'
+    'datetitle numbertitle numbertitle numbertitle numbertitle'
     'line line line line line' 
     '. marks marks marks marks'
     'date_1 number_1 number_1 number_1 number_1'
@@ -17,4 +17,24 @@
     'date_6 number_6 number_6 number_6 number_6'
     'date_7 number_7 number_7 number_7 number_7'
     '. marks_down marks_down marks_down marks_down';
+}
+
+@media all and (max-width: 1450px){
+  .stat__table {
+    margin-left: 5%;
+    width: 90%;
+  }
+}
+
+@media all and (max-width: 1028px){
+  .stat__table {
+    margin-bottom: 40px;
+  }
+}
+
+@media all and (max-width: 425px){
+  .stat__table {
+    grid-template-columns: 25% 1fr 1fr 1fr 1fr;
+    grid-template-rows: 45px 15px 30px repeat(6, 55px) 40px;
+  }
 }
