--- a/blocks/search/__button/search__button.css
+++ b/blocks/search/__button/search__button.css
@@ -9,7 +9,7 @@
   border-radius: 100px;
   border: none;
 
-  background-color: #2F71E5;
+  background: #2F71E5;
   font-family: 'Roboto';
   font-style: normal;
   font-weight: 500;
@@ -22,12 +22,14 @@
 }
 
 .search__button:hover {
-  background-color: #347eff;
+  background: #347eff;
 }
 
 .search__button:active, :focus {
-  background-color: #2A65CC;
+  background: black;
   color: #ffffff;
+  outline: none;
+  border: none;
 }
 
 @media all and (max-width: 1280px){
