--- a/blocks/commits/__commit/commits__commit.css
+++ b/blocks/commits/__commit/commits__commit.css
@@ -5,3 +5,15 @@
   background: #ffffff;
   border-radius: 10px;
 }
+
+@media all and (max-width: 1280px){
+  .commits__commit {
+    padding-right: 16px;
+  }
+}
+
+@media all and (max-width: 1024px){
+  .commits__commit {
+    height: 194px;
+  }
+}
