--- a/blocks/commits/__image/commits__image.css
+++ b/blocks/commits/__image/commits__image.css
@@ -1,4 +1,10 @@
 .commits__image {
-  /* width: 64px; */
   margin-right: 16px;
+}
+
+@media all and (max-width: 1024px){
+  .commits__image {
+    width: 48px;
+    margin-right: 12px;
+  }
 }
