Адаптив в блоке technologies

--- a/blocks/search/__button/search__button.css
+++ b/blocks/search/__button/search__button.css
@@ -18,7 +18,7 @@
   color: #ffffff;
 
   cursor: pointer;
-  /* transition: background 0.2s linear; */
+  transition: background-color 0.2s linear;
 }
 
 .search__button:hover {
