--- a/blocks/technologies/__item/technologies__item.css
+++ b/blocks/technologies/__item/technologies__item.css
@@ -6,3 +6,9 @@
 .technologies__item:last-of-type {
   margin-right: 0;
 }
+
+@media all and (max-width: 1024px) {
+  .technologies__item {
+    margin-right: 0;
+  }  
+}
