--- a/blocks/description/__text/description__text.css
+++ b/blocks/description/__text/description__text.css
@@ -9,3 +9,16 @@
   font-size: 18px;
   line-height: 24px;
 }
+
+@media all and (max-width: 1450px) {
+  .description__text {
+    margin-left: 5%;
+  }
+}
+
+@media all and (max-width: 1024px) {
+  .description__text {
+    width: 90%;
+    margin-top: 16px;
+  }
+}
