--- a/blocks/description/__title/description__title.css
+++ b/blocks/description/__title/description__title.css
@@ -7,3 +7,18 @@
   font-size: 40px;
   line-height: 46px;
 }
+
+@media all and (max-width: 1450px) {
+  .description__title {
+    margin-left: 5%;
+  }
+}
+
+@media all and (max-width: 1024px) {
+  .description__title {
+    font-size: 30px;
+    line-height: 34px;
+
+    margin-top: 30px;
+  }
+}
