--- a/blocks/result/__ref/result__ref.css
+++ b/blocks/result/__ref/result__ref.css
@@ -23,10 +23,10 @@
   right: -15px;
 }
 
-.result__ref:hover, :active {
+/* .result__ref:hover, :active {
   background: inherit;
 }
-
+ */
 @media all and (max-width: 650px) {
   .result__ref {
     margin: 16px 0 0 -4px;
