--- a/pages/about.css
+++ b/pages/about.css
@@ -1,13 +1,13 @@
 @import url('../blocks/body/body.css');
 @import url('../blocks/header/header.css');
 @import url('../blocks/content/content.css');
-@import url('../blocks/search/search.css');
-@import url('../blocks/preloader/preloader.css');
-@import url('../blocks/not-found/not-found.css');
+@import url('../blocks/description/description.css');
+@import url('../blocks/technologies/technologies.css');
+@import url('../blocks/author/author.css');
+@import url('../blocks/commits/commits.css');
+@import url('../blocks/footer/footer.css');
 @import url('../blocks/result/result.css');
 @import url('../blocks/link/link.css');
-@import url('../blocks/author/author.css');
-@import url('../blocks/footer/footer.css');
 
 @font-face {
   font-family: 'Roboto';
