--- a/pages/analytics.css
+++ b/pages/analytics.css
@@ -1,13 +1,10 @@
 @import url('../blocks/body/body.css');
 @import url('../blocks/header/header.css');
 @import url('../blocks/content/content.css');
-@import url('../blocks/search/search.css');
-@import url('../blocks/preloader/preloader.css');
-@import url('../blocks/not-found/not-found.css');
-@import url('../blocks/result/result.css');
-@import url('../blocks/link/link.css');
-@import url('../blocks/author/author.css');
+@import url('../blocks/resume/resume.css');
+@import url('../blocks/stat/stat.css');
 @import url('../blocks/footer/footer.css');
+@import url('../blocks/link/link.css');
 
 @font-face {
   font-family: 'Roboto';
